--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,3 @@
-model no constraints/
-model with constraints/
-model with constraints and no constraints/
+**/model no constraints/
+**/model with constraints/
+**/model with constraints and no constraints/
