--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,3 @@
-**/model no constraints/
+**/model no constraint/
 **/model with constraints/
-**/model with constraints and no constraints/
+**/model with constraints NLP/
